Update ChatController.java