@@ -5,11 +5,10 @@ import org.springframework.http.*;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.client.RestTemplate;
 
-import java.util.Collections;
-import java.util.Map;
+import java.util.*;
 
 @RestController
-@CrossOrigin(origins = "frontendUrl") 
+@CrossOrigin(origins = "frontendUrl")
 @RequestMapping("/api")
 public class ChatController {
 
@@ -21,19 +20,16 @@ public class ChatController {
     @PostMapping("/chat")
     public Map<String, String> chat(@RequestBody Map<String, String> payload) {
         String userMessage = payload.get("message");
-        String reply;
 
-        String url = "https://gemini.googleapis.com/v1/chat:generateMessage?key=" + apiKey;
+        String url = "https://openrouter.ai/api/v1/chat/completions";
 
-        Map<String, Object> requestBody = Map.of(
-            "model", "gemini-2.0-flash",
-            "messages", Collections.singletonList(
-                Map.of("role", "user", "content", userMessage)
-            )
-        );
-
-        HttpHeaders headers = new HttpHeaders();
-        headers.setContentType(MediaType.APPLICATION_JSON);
+        Map<String, Object> requestBody = new HashMap<>();
+        requestBody.put("model", "google/gemini-2.0-flash-exp:free");
+        requestBody.put("messages", List.of(
+                Map.of("role", "user", "content", List.of(
+                        Map.of("type", "text", "text", userMessage)
+                ))
+        ));
 
         HttpEntity<Map<String, Object>> requestEntity = new HttpEntity<>(requestBody, headers);
 
@@ -42,21 +38,18 @@ public class ChatController {
             Map<?, ?> responseBody = response.getBody();
 
             if (responseBody != null && responseBody.containsKey("choices")) {
-                var choices = (java.util.List<?>) responseBody.get("choices");
+                List<?> choices = (List<?>) responseBody.get("choices");
                 if (!choices.isEmpty()) {
                     Map<?, ?> choice = (Map<?, ?>) choices.get(0);
                     Map<?, ?> message = (Map<?, ?>) choice.get("message");
-                    reply = message.get("content").toString();
+                    String reply = message.get("content").toString();
                     return Map.of("response", reply);
                 }
             }
-
-            reply = "抱歉，未收到有效回覆。";
+            return Map.of("response", "抱歉，未收到有效回覆。");
         } catch (Exception e) {
             e.printStackTrace();
-            reply = "呼叫 Gemini API 發生錯誤：" + e.getMessage();
+            return Map.of("response", "呼叫 OpenRouter API 發生錯誤：" + e.getMessage());
         }
-
-        return Map.of("response", reply);
     }
 }
